--- a/demo.html
+++ b/demo.html
@@ -82,18 +82,18 @@
             </div>
         </div>
     </div>
-    <div class="pan-zoom">
-        <div class="draggable"></div>
+    <div class="pan-zoom-container">
+        <div class="pan-zoom">
+            <div class="draggable"></div>
+        </div>
     </div>
     <script type="text/javascript">
-   
     $(document).ready(function(e) {
 
         $(document).foundation();
         $('.pan-zoom').panzoom();
 
     });
-
     </script>
 </body>
 
